corrected alignment of project section

--- a/styleV2.css
+++ b/styleV2.css
@@ -482,7 +482,7 @@
     }
 }
 
-/*Portfilio CSS*/
+/*Projects CSS*/
 
 .projects {
     background: #002ed0;
@@ -537,6 +537,7 @@
 .projects__right a {
     color:#fff;
     text-decoration: none;
+    
 
 }
 
@@ -556,7 +557,7 @@
 
 }
 
-/*Portfolio Media Queries*/
+/*Project Media Queries*/
 
 @media screen and (max-width: 1368px) {
     .projects__projects{
@@ -591,6 +592,120 @@
         padding: 10px;
     }
     .projects__container h1 {
+        font-size: 40px;
+    }
+}
+
+
+/*second project*/
+/*SecondProjects CSS*/
+.secondProjects {
+    background: #002ed0;
+    color:#fff;
+
+}
+
+.secondProjects__container{
+    padding-top: 100px;
+    padding-bottom:100px;
+    padding-left: 60px;
+
+}
+
+.secondProjects__container h1 {
+    font-size: 110px;
+    color:#fff;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: #fff;;
+    margin:32px;
+ 
+
+}
+
+.secondProjects__main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.secondProjects__img {
+    height: 100%;
+    width:100%;
+
+}
+
+.secondProjects__right {
+    padding: 150px 100px 0 20px;
+
+}
+
+.secondProjects__right h2 {
+    margin-bottom: 40px;
+    font-size: 30px;
+}
+
+.secondProjects__right p {
+    margin-bottom: 50px;
+    line-height: 2.5;
+}
+
+.secondProjects__right a {
+    color:#fff;
+    text-decoration: none;
+
+}
+
+.secondProjects__secondProjects {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding:32px 64px;
+
+
+}
+
+.secondProjects__secondProjects img{
+    padding: 0 8px;
+    width: 100%;
+    height: 100%;
+
+}
+
+/*Project Media Queries*/
+
+@media screen and (max-width: 1368px) {
+    .secondProjects__secondProjects{
+        flex-direction: column;
+
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .secondProjects{
+        padding:30px;
+
+    }
+    .secondProjects__container h1 {
+        font-size: 70px;
+
+    }
+    .secondProjects__main{
+        grid-template-columns: 1fr;
+    }
+
+    .secondProjects__container{
+        padding-left: 0px;
+    }
+    .secondProjects__right{
+        margin-bottom: 60px;
+    }
+}
+
+@media screen and (max-width: 468px){
+    .secondProjects{
+        padding: 10px;
+    }
+    .secondProjects__container h1 {
         font-size: 40px;
     }
 }
